# Analyse-der-F-higkeiten-von-KI-Assistenten---Pensuni---Bachelorarbeit-BSWE-Hochschule-Burgenland

./: CMakeLists.txt  README.md  inspector.bat
erzeugte_reports/: TC10_B_report.txt  TC11_B_report.txt  TC12_B_report.txt  TC13_B_report.txt  TC14_B_report.txt  TC15_B_report.txt  TC1_B_report.txt  TC2_B_report.txt  TC3_B_report.txt  TC4_B_report.txt  TC5_B_report.txt  TC6_B_report.txt  TC7_B_report.txt  TC8_B_report.txt  TC9_B_report.txt
inspector_results/TC10_B/: TC10_B.inspxe  inspxe-cl.txt
inspector_results/TC11_B/: TC11_B.inspxe  inspxe-cl.txt
inspector_results/TC12_B/: TC12_B.inspxe  inspxe-cl.txt
inspector_results/TC13_B/: TC13_B.inspxe  inspxe-cl.txt
inspector_results/TC14_B/: TC14_B.inspxe  inspxe-cl.txt
inspector_results/TC15_B/: TC15_B.inspxe  inspxe-cl.txt
inspector_results/TC1_B/: TC1_B.inspxe  inspxe-cl.txt
inspector_results/TC2_B/: TC2_B.inspxe  inspxe-cl.txt
inspector_results/TC3_B/: TC3_B.inspxe  inspxe-cl.txt
inspector_results/TC4_B/: TC4_B.inspxe  inspxe-cl.txt
inspector_results/TC5_B/: TC5_B.inspxe  inspxe-cl.txt
inspector_results/TC6_B/: TC6_B.inspxe  inspxe-cl.txt
inspector_results/TC7_B/: TC7_B.inspxe  inspxe-cl.txt
inspector_results/TC8_B/: TC8_B.inspxe  inspxe-cl.txt
inspector_results/TC9_B/: TC9_B.inspxe  inspxe-cl.txt
src/: clean.py  main.cpp
src/buffer_overflow/: buffer_tests.cpp  buffer_tests.h
src/helper/: helper_structures.h  test_output.h
src/memory_leak/: memory_leak_tests.cpp  memory_leak_tests.h
src/use_after_free/: use_after_tests.cpp  use_after_tests.h
(+118 files in other folders)
